# pico-sx126x

./: CMakeLists.txt  Makefile  semtech-pico-hal
include/: radio-config.h  radio.h  sx126x-board.h  sx126x.h
includes/: sx126x.h
src/: radio.c  sx126x-board.c  sx126x.c
